# minilayer

./: pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: python-publish.yaml  release-binaries-on-ec2-all.yaml  release-binaries-on-ec2.yaml  release-binaries.yaml  run-generation-tests.yaml  run-tests.yaml
