[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "minilayer"
version = "0.3.8"
description = ""
authors = ["Daniel Braun"]

[tool.poetry.dependencies]
python = ">=3.7"
pydantic = "1.10.5"
typer = "^0.7.0"
invoke = "^2.0.0"
semver = "2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-shell-utilities = "^1.7.0"
black = "^23.3.0"
mypy = "^1.1.1"
GitPython = "^3.1.31"
build = "^0.10.0"
setuptools = "^67.6.1"
wheel = "^0.40.0"
setuptools-scm = "^7.1.0"
packaging = "^23.0"

[tool.poetry.group.generate.dependencies]
easyfs = "0.0.3"

[tool.poetry.scripts]
minilayer = "minilayer.__main__:main"

